--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,8 +2,15 @@
   <% @articles.each do |article| %>
     <li>
       <%= link_to article.title, article_path(article) %><br />
+      
     </li>
   <% end %>
 </ul>
 
-<%= link_to 'New Article', new_article_path %>
+<% if current_user %>
+  <%= link_to 'New Article', new_article_path %>
+  <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+<% else %>
+  <%= link_to 'Sign up', new_user_registration_path %>
+  <%= link_to 'Sign in', new_user_session_path %>
+<% end %>
