--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -5,3 +5,5 @@
   <%= form.text_area :content %>
   <%= form.submit 'Create Article' %>
 <% end %>
+
+<button><%= link_to 'Back', root_path %></button>
