--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
     <% if flash[:notice] %>
       <%= flash[:notice] %>
       <% end %>
+      <button><%= link_to 'Back', root_path %></button>
+
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
